# toy-robot-challenge

./: CMakeLists.txt  README.md  expected_output.txt  sample_data.txt
lib/: IRobot.h  parser.h  robot.h  table.h  utils.h
src/: main.cpp  parser.cpp  robot.cpp  table.cpp  utils.cpp
tests/: fixtures.cpp  fixtures.h  test_parser.cpp  test_robot.cpp  tests.cpp
